add static,base template,inherite

--- a/templates/base.html
+++ b/templates/base.html
@@ -1175,7 +1175,9 @@
     
 
 
-      
+      {% block body%}
+
+      {% endblock body %}
       
    
 
@@ -1207,6 +1209,7 @@
         </div>
       </div>
     </section>
+
     <!--=====================================
                     NEWSLETTER PART END
         =======================================-->
@@ -1393,21 +1396,21 @@
                     JS LINK PART START
         =======================================-->
     <!-- VENDOR -->
-    <script src="vendor/bootstrap/jquery-1.12.4.min.js"></script>
-    <script src="vendor/bootstrap/popper.min.js"></script>
-    <script src="vendor/bootstrap/bootstrap.min.js"></script>
-    <script src="vendor/countdown/countdown.min.js"></script>
-    <script src="vendor/niceselect/nice-select.min.js"></script>
-    <script src="vendor/slickslider/slick.min.js"></script>
-    <script src="vendor/venobox/venobox.min.js"></script>
+    <script src="{% static 'en/vendor/bootstrap/jquery-1.12.4.min.js' %}"></script>
+    <script src="{% static 'en/vendor/bootstrap/popper.min.js' %}"></script>
+    <script src="{% static 'en/vendor/bootstrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'en/vendor/countdown/countdown.min.js' %}"></script>
+    <script src="{% static 'en/vendor/niceselect/nice-select.min.js' %}"></script>
+    <script src="{% static 'en/vendor/slickslider/slick.min.js'%}"></script>
+    <script src="{% static 'en/vendor/venobox/venobox.min.js' %}"></script>
 
     <!-- CUSTOM -->
-    <script src="js/nice-select.js"></script>
-    <script src="js/countdown.js"></script>
-    <script src="js/accordion.js"></script>
-    <script src="js/venobox.js"></script>
-    <script src="js/slick.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'en/js/nice-select.js' %}"></script>
+    <script src="{% static 'en/js/countdown.js' %}"></script>
+    <script src="{% static 'en/js/accordion.js' %}"></script>
+    <script src="{% static 'en/js/venobox.js' %}"></script>
+    <script src="{% static 'en/js/slick.js' %}"></script>
+    <script src="{% static 'en/js/main.js' %}"></script>
     <!--=====================================
                     JS LINK PART END
         =======================================-->
