--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %} {% block body%}
+
 <!--=====================================
                     BANNER PART START
         =======================================-->
@@ -2133,3 +2135,4 @@
 <!--=====================================
                     SHOP PART END
         =======================================-->
+{% endblock body %}
