--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                     CSS LINK PART START
         =======================================-->
     <!-- FAVICON -->
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="{% static 'en/images/favicon.png' %} " />
 
     <!-- FONTS -->
     <link
@@ -1172,18 +1172,12 @@
     <!--=====================================
      
 
+        {% block body %}    
+        {% endblock body %}    
+
+
+        ===================================== 
     
-
-
-      {% block body%}
-
-      {% endblock body %}
-      
-   
-
-           =======================================-->
-
-    <!--=====================================
                     NEWSLETTER PART START
         =======================================-->
     <section
