--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block body %}
+{% extends 'base.html' %} {% block b %}
+
 <!--=====================================
                     BANNER PART START
         =======================================-->
@@ -2140,4 +2141,4 @@
 <!--=====================================
                     SHOP PART END
         =======================================-->
-{% endblock body %}
+{% endblock b %}
