--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="{% static 'en/css/main.css' %}" />
     <link rel="stylesheet" href="{% static 'en/css/index.css' %}" />
+    <link rel="stylesheet" href="{% static 'en/css/product-details.css' %}" />
     <!--=====================================
                     CSS LINK PART END
         =======================================-->
