show product list ,details and reviews in templates

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block b %}
+{% extends 'base.html' %} {% block css %} {% endblock css %} {% block b %}
 
 <!--=====================================
                     BANNER PART START
