--- a/templates/base.html
+++ b/templates/base.html
@@ -71,8 +71,11 @@
 
     <!-- CUSTOM -->
     <link rel="stylesheet" href="{% static 'en/css/main.css' %}" />
+
+    {% block css %}
     <link rel="stylesheet" href="{% static 'en/css/index.css' %}" />
-    <link rel="stylesheet" href="{% static 'en/css/product-details.css' %}" />
+    {% endblock css %}
+
     <!--=====================================
                     CSS LINK PART END
         =======================================-->
