show product reviews from view

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -179,7 +179,7 @@
         <div class="product-details-frame">
           <h3 class="frame-title">Reviews (2)</h3>
           <ul class="review-list">
-            {% for review in object.reviews_product.all %}
+            {% for review in reviewsTem %}
 
             <li class="review-item">
               <div class="review-media">
