--- a/products/templates/products/brand_detail.html
+++ b/products/templates/products/brand_detail.html
@@ -38,7 +38,7 @@
     <li class="fas fa-star"></li>
     <li class="total">(163 ratings)</li>
   </ul>
-  <p>(45 items)</p>
+  <p>({{brand.product_count}} items)</p>
 </div>
 <!--=====================================
                   BRAND SINGLE PART END
@@ -155,37 +155,34 @@
         <div class="bottom-paginate">
           <p class="page-info">Showing 12 of 60 Results</p>
           <ul class="pagination">
-            
-            
-            {% if page_obj.has_previous  %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{page_obj.previous_page_number}}">
-                    <i class="fas fa-long-arrow-alt-left"></i>
-                  </a>
-                </li>
-  
-            {% endif %}
-              
-            
-            {% for i in paginator.page_range  %}
-                {% if page_obj.number == i  %}
-                    <li class="page-item"><a class="page-link active" href="#">{{i}}</a>    </li>
-                
-                {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}    
-                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                {% endif %} 
-              {% endfor %}
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+              <a
+                class="page-link"
+                href="?page={{page_obj.previous_page_number}}"
+              >
+                <i class="fas fa-long-arrow-alt-left"></i>
+              </a>
+            </li>
 
-            
-            {% if page_obj.has_next %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{page_obj.next_page_number}}">
-                    <i class="fas fa-long-arrow-alt-right"></i>
-                  </a>
-                </li>  
+            {% endif %} {% for i in paginator.page_range %} {% if
+            page_obj.number == i %}
+            <li class="page-item">
+              <a class="page-link active" href="#">{{i}}</a>
+            </li>
+
+            {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4'
+            %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{i}}">{{i}}</a>
+            </li>
+            {% endfor %} {% if page_obj.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{page_obj.next_page_number}}">
+                <i class="fas fa-long-arrow-alt-right"></i>
+              </a>
+            </li>
             {% endif %}
-              
-            
           </ul>
         </div>
       </div>
