--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -67,54 +67,51 @@
           </div>
           <div class="brand-meta">
             <h4>{{brand.name}}</h4>
-            <p>(45 items)</p>
+            <p>({{brand.product_count}} items)</p>
           </div>
         </div>
       </div>
       {% endfor %}
     </div>
-
     {% if is_paginated %}
     <div class="row">
       <div class="col-lg-12">
         <div class="bottom-paginate">
           <p class="page-info">Showing 12 of 60 Results</p>
           <ul class="pagination">
-            
-            
-            {% if page_obj.has_previous  %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{page_obj.previous_page_number}}">
-                    <i class="fas fa-long-arrow-alt-left"></i>
-                  </a>
-                </li>
-  
-            {% endif %}
-              
-            
-            {% for i in paginator.page_range  %}
-                {% if page_obj.number == i  %}
-                    <li class="page-item"><a class="page-link active" href="#">{{i}}</a>    </li>
-                
-                {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}    
-                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                {% endif %} 
-              {% endfor %}
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+              <a
+                class="page-link"
+                href="?page={{page_obj.previous_page_number}}"
+              >
+                <i class="fas fa-long-arrow-alt-left"></i>
+              </a>
+            </li>
 
-            
-            {% if page_obj.has_next %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{page_obj.next_page_number}}">
-                    <i class="fas fa-long-arrow-alt-right"></i>
-                  </a>
-                </li>  
+            {% endif %} {% for i in paginator.page_range %} {% if
+            page_obj.number == i %}
+            <li class="page-item">
+              <a class="page-link active" href="#">{{i}}</a>
+            </li>
+
+            {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4'
+            %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{i}}">{{i}}</a>
+            </li>
+            {% endfor %} {% if page_obj.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{page_obj.next_page_number}}">
+                <i class="fas fa-long-arrow-alt-right"></i>
+              </a>
+            </li>
             {% endif %}
-              
-            
           </ul>
         </div>
       </div>
     </div>
+
     {% endif %}
   </div>
 </section>
