--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -89,9 +89,10 @@
               </a>
             </li>
 
-            {% endif %} {% for i in paginator.page_range %} {% if
-            page_obj.number == i %}
-            <li class="page-item">
+            {% endif %} 
+            {% for i in paginator.page_range %} 
+            {% if page_obj.number == i %}
+             <li class="page-item">
               <a class="page-link active" href="#">{{i}}</a>
             </li>
 
@@ -100,6 +101,7 @@
             <li class="page-item">
               <a class="page-link" href="?page={{i}}">{{i}}</a>
             </li>
+            {% endif %}
             {% endfor %} {% if page_obj.has_next %}
             <li class="page-item">
               <a class="page-link" href="?page={{page_obj.next_page_number}}">
