--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -415,7 +415,7 @@
                   <i class="active icofont-star"></i>
                   <i class="active icofont-star"></i>
                   <i class="icofont-star"></i>
-                  <a href="product-video.html">(3)</a>
+                  <a href="product-video.html">({{object.review_count}})</a>
                 </div>
                 <h6 class="product-name">
                   <a href="/products/{{object.slug}}">{{object.name}}</a>
@@ -455,37 +455,38 @@
             <div class="bottom-paginate">
               <p class="page-info">Showing 12 of 60 Results</p>
               <ul class="pagination">
-                
-                
-                {% if page_obj.has_previous  %}
-                    <li class="page-item">
-                      <a class="page-link" href="?page={{page_obj.previous_page_number}}">
-                        <i class="fas fa-long-arrow-alt-left"></i>
-                      </a>
-                    </li>
-      
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                  <a
+                    class="page-link"
+                    href="?page={{page_obj.previous_page_number}}"
+                  >
+                    <i class="fas fa-long-arrow-alt-left"></i>
+                  </a>
+                </li>
                 {% endif %}
-                  
-                
-                {% for i in paginator.page_range  %}
-                    {% if page_obj.number == i  %}
-                        <li class="page-item"><a class="page-link active" href="#">{{i}}</a>    </li>
-                    
-                    {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}    
-                        <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                    {% endif %} 
-                  {% endfor %}
-    
-                
-                {% if page_obj.has_next %}
-                    <li class="page-item">
-                      <a class="page-link" href="?page={{page_obj.next_page_number}}">
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                      </a>
-                    </li>  
+
+                {% for i in paginator.page_range %} 
+                {% if page_obj.number == i %}
+                <li class="page-item">
+                  <a class="page-link active" href="#">{{i}}</a>
+                </li>
+
+                {% elif i > page_obj.number|add:'-4' and i <
+                page_obj.number|add:'4' %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{i}}">{{i}}</a>
+                </li>
+                {% endif %} {% endfor %} {% if page_obj.has_next %}
+                <li class="page-item">
+                  <a
+                    class="page-link"
+                    href="?page={{page_obj.next_page_number}}"
+                  >
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                  </a>
+                </li>
                 {% endif %}
-                  
-                
               </ul>
             </div>
           </div>
