--- a/products/templates/products/brand_detail.html
+++ b/products/templates/products/brand_detail.html
@@ -165,18 +165,21 @@
               </a>
             </li>
 
-            {% endif %} {% for i in paginator.page_range %} {% if
-            page_obj.number == i %}
+            {% endif %}
+            
+            {% for i in paginator.page_range %} 
+            {% if page_obj.number == i %}
             <li class="page-item">
               <a class="page-link active" href="#">{{i}}</a>
             </li>
 
-            {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4'
-            %}
+            {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}
             <li class="page-item">
               <a class="page-link" href="?page={{i}}">{{i}}</a>
             </li>
-            {% endfor %} {% if page_obj.has_next %}
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
             <li class="page-item">
               <a class="page-link" href="?page={{page_obj.next_page_number}}">
                 <i class="fas fa-long-arrow-alt-right"></i>
