--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
           </div>
 
           <a href="index.html" class="header-logo">
-            <img src="images/logo.png" alt="logo" />
+            <img src="{{get_settings.logo.url}}" alt="logo" />
           </a>
           <a href="login.html" class="header-widget" title="My Account">
             <img src="images/user.png" alt="user" />
@@ -198,14 +198,14 @@
                   <i class="icofont-ui-touch-phone"></i>
                   <p>
                     <small>call us</small>
-                    <span>(+880) 183 8288 389</span>
+                    <span>{{get_settings.call_us}}</span>
                   </p>
                 </div>
                 <div class="navbar-info">
                   <i class="icofont-ui-email"></i>
                   <p>
                     <small>email us</small>
-                    <span>support@greeny.com</span>
+                    <span>{{get_settings.email_us}}</span>
                   </p>
                 </div>
               </div>
@@ -1020,9 +1020,7 @@
                 <img src="images/logo.png" alt="logo" />
               </a>
               <p class="footer-desc">
-                Adipisci asperiores ipsum ipsa repellat consequatur repudiandae
-                quisquam assumenda dolor perspiciatis sit ipsum dolor amet.
-              </p>
+                {{get_settings.subtitle}} </p>
               <ul class="footer-social">
                 <li><a class="icofont-facebook" href="#"></a></li>
                 <li><a class="icofont-twitter" href="#"></a></li>
@@ -1039,20 +1037,19 @@
                 <li>
                   <i class="icofont-ui-email"></i>
                   <p>
-                    <span>support@greeny.com</span>
-                    <span>carrer@greeny.com</span>
+                    <span>{{get_settings.emails}}</span>
+                    
                   </p>
                 </li>
                 <li>
                   <i class="icofont-ui-touch-phone"></i>
                   <p>
-                    <span>+120 279 532 13</span>
-                    <span>+120 279 532 14</span>
-                  </p>
+                    <span>{{get_settings.phones}}</span>
+                    </p>
                 </li>
                 <li>
                   <i class="icofont-location-pin"></i>
-                  <p>1Hd- 50, 010 Avenue, NY 90001 United States</p>
+                  <p>{{get_settings.address}}</p>
                 </li>
               </ul>
             </div>
