--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -207,7 +207,8 @@
 
         <div class="product-details-frame">
           <h3 class="frame-title">add your review</h3>
-          <form class="review-form" method="post" action="/products/{{object.slug}}/add_review">
+          <form class="review-form" method="post" action="/products/{{object.slug}}/add-review">
+            {% csrf_token %}
             <div class="row">
               <div class="col-lg-12">
                 <div class="star-rating">
@@ -225,7 +226,7 @@
               </div>
 
               <div class="col-lg-12">
-                <button class="btn btn-inline">
+                <button class="btn btn-inline" type="submit">
                   <i class="icofont-water-drop"></i>
                   <span>drop your review</span>
                 </button>
