--- a/templates/base.html
+++ b/templates/base.html
@@ -140,8 +140,14 @@
             <img src="{{get_settings.logo.url}}" alt="logo" />
           </a>
           <a href="login.html" class="header-widget" title="My Account">
-            <img src="images/user.png" alt="user" />
-            <span>join</span>
+            {% if user.is_authenticated %}
+                <img src="images/user.png" alt="user" />
+            {% else %}
+                <a href="#"> login </a>
+                <a href="#"> signup</a>
+            {% endif %}
+            
+            
           </a>
 
           <form class="header-form">
