--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -35,7 +35,7 @@
                                 <label class="form-label">short by:</label>
                                 <select class="form-select">
                                     <option value="all" selected>all order</option>
-                                    <option value="recieved">recieved order</option>
+                                    <option value="recieved" >recieved order</option>
                                     <option value="processed">processed order</option>
                                     <option value="shipped">shipped order</option>
                                     <option value="delivered">delivered order</option>
@@ -59,20 +59,22 @@
                                     <div class="col-lg-12">
                                         <div class="order-track">
                                             <ul class="order-track-list">
-                                                <li class="order-track-item active">
-                                                    <i class="icofont-check"></i>
+                                                
+                                                <li class="order-track-item {% if order.status == 'Reecieved' or order.status == 'Processed' or order.status == 'Shiped' or order.status == 'Delivered'  %} active {% endif %}">
+                                                    <i class="icofont-{% if order.status == 'Reecieved' or order.status == 'Processed' or order.status == 'Shiped' or order.status == 'Delivered'  %}check{% else %}close{% endif %}"></i>
                                                     <span>order recieved</span>
                                                 </li>
-                                                <li class="order-track-item">
-                                                    <i class="icofont-close"></i>
+
+                                                <li class="order-track-item {% if order.status == 'Processed' or order.status == 'Shiped' or order.status == 'Delivered'  %} active {% endif %} ">
+                                                    <i class="icofont-{% if order.status == 'Processed' or order.status == 'Shiped' or order.status == 'Delivered'  %}check{% else %}close{% endif %}"></i>
                                                     <span>order processed</span>
                                                 </li>
-                                                <li class="order-track-item">
-                                                    <i class="icofont-close"></i>
+                                                <li class="order-track-item {% if  order.status == 'Shiped' or order.status == 'Delivered'  %} active {% endif %}">
+                                                    <i class="icofont-{% if order.status == 'Shiped' or order.status == 'Delivered'  %}check{% else %}close{% endif %}"></i>
                                                     <span>order shipped</span>
                                                 </li>
-                                                <li class="order-track-item">
-                                                    <i class="icofont-close"></i>
+                                                <li class="order-track-item {% if order.status == 'Delivered'  %} active {% endif %}">
+                                                    <i class="icofont-{% if  order.status == 'Delivered'  %}check{% else %}close{% endif %}"></i>
                                                     <span>order delivered</span>
                                                 </li>
                                             </ul>
