--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
           </div>
 
           <a href="index.html" class="header-logo">
-            <img src="{{get_settings.logo.url}}" alt="logo" />
+            <img src="{{settings_data.logo.url}}" alt="logo" />
           </a>
           <a href="login.html" class="header-widget" title="My Account">
             {% if user.is_authenticated %}
@@ -204,14 +204,14 @@
                   <i class="icofont-ui-touch-phone"></i>
                   <p>
                     <small>call us</small>
-                    <span>{{get_settings.call_us}}</span>
+                    <span>{{settings_data.call_us}}</span>
                   </p>
                 </div>
                 <div class="navbar-info">
                   <i class="icofont-ui-email"></i>
                   <p>
                     <small>email us</small>
-                    <span>{{get_settings.email_us}}</span>
+                    <span>{{settings_data.email_us}}</span>
                   </p>
                 </div>
               </div>
@@ -384,14 +384,17 @@
       <div class="cart-header">
         <div class="cart-total">
           <i class="fas fa-shopping-basket"></i>
-          <span>total item (5)</span>
+          <span>total item ({{cart_details_data|length}})</span>
         </div>
         <button class="cart-close"><i class="icofont-close"></i></button>
       </div>
       <ul class="cart-list">
+        
+        {% for item in cart_details_data  %}
+          
         <li class="cart-item">
           <div class="cart-media">
-            <a href="#"><img src="images/product/01.jpg" alt="product" /></a>
+            <a href="#"><img src="{{item.product.image.url}}" alt="product" /></a>
             <button class="cart-delete">
               <i class="far fa-trash-alt"></i>
             </button>
@@ -399,156 +402,25 @@
           <div class="cart-info-group">
             <div class="cart-info">
               <h6><a href="product-single.html">existing product name</a></h6>
-              <p>Unit Price - $8.75</p>
+              <p>Unit Price - ${{item.product.price}}</p>
             </div>
             <div class="cart-action-group">
               <div class="product-action">
-                <button class="action-minus" title="Quantity Minus">
-                  <i class="icofont-minus"></i>
-                </button>
                 <input
                   class="action-input"
                   title="Quantity Number"
                   type="text"
                   name="quantity"
-                  value="1"
+                  value="{{item.quantity}}"
                 />
-                <button class="action-plus" title="Quantity Plus">
-                  <i class="icofont-plus"></i>
-                </button>
               </div>
-              <h6>$56.98</h6>
+              <h6>${{item.total}}</h6>
             </div>
           </div>
         </li>
-        <li class="cart-item">
-          <div class="cart-media">
-            <a href="#"><img src="images/product/02.jpg" alt="product" /></a>
-            <button class="cart-delete">
-              <i class="far fa-trash-alt"></i>
-            </button>
-          </div>
-          <div class="cart-info-group">
-            <div class="cart-info">
-              <h6><a href="product-single.html">existing product name</a></h6>
-              <p>Unit Price - $8.75</p>
-            </div>
-            <div class="cart-action-group">
-              <div class="product-action">
-                <button class="action-minus" title="Quantity Minus">
-                  <i class="icofont-minus"></i>
-                </button>
-                <input
-                  class="action-input"
-                  title="Quantity Number"
-                  type="text"
-                  name="quantity"
-                  value="1"
-                />
-                <button class="action-plus" title="Quantity Plus">
-                  <i class="icofont-plus"></i>
-                </button>
-              </div>
-              <h6>$56.98</h6>
-            </div>
-          </div>
-        </li>
-        <li class="cart-item">
-          <div class="cart-media">
-            <a href="#"><img src="images/product/03.jpg" alt="product" /></a>
-            <button class="cart-delete">
-              <i class="far fa-trash-alt"></i>
-            </button>
-          </div>
-          <div class="cart-info-group">
-            <div class="cart-info">
-              <h6><a href="product-single.html">existing product name</a></h6>
-              <p>Unit Price - $8.75</p>
-            </div>
-            <div class="cart-action-group">
-              <div class="product-action">
-                <button class="action-minus" title="Quantity Minus">
-                  <i class="icofont-minus"></i>
-                </button>
-                <input
-                  class="action-input"
-                  title="Quantity Number"
-                  type="text"
-                  name="quantity"
-                  value="1"
-                />
-                <button class="action-plus" title="Quantity Plus">
-                  <i class="icofont-plus"></i>
-                </button>
-              </div>
-              <h6>$56.98</h6>
-            </div>
-          </div>
-        </li>
-        <li class="cart-item">
-          <div class="cart-media">
-            <a href="#"><img src="images/product/04.jpg" alt="product" /></a>
-            <button class="cart-delete">
-              <i class="far fa-trash-alt"></i>
-            </button>
-          </div>
-          <div class="cart-info-group">
-            <div class="cart-info">
-              <h6><a href="product-single.html">existing product name</a></h6>
-              <p>Unit Price - $8.75</p>
-            </div>
-            <div class="cart-action-group">
-              <div class="product-action">
-                <button class="action-minus" title="Quantity Minus">
-                  <i class="icofont-minus"></i>
-                </button>
-                <input
-                  class="action-input"
-                  title="Quantity Number"
-                  type="text"
-                  name="quantity"
-                  value="1"
-                />
-                <button class="action-plus" title="Quantity Plus">
-                  <i class="icofont-plus"></i>
-                </button>
-              </div>
-              <h6>$56.98</h6>
-            </div>
-          </div>
-        </li>
-        <li class="cart-item">
-          <div class="cart-media">
-            <a href="#"><img src="images/product/05.jpg" alt="product" /></a>
-            <button class="cart-delete">
-              <i class="far fa-trash-alt"></i>
-            </button>
-          </div>
-          <div class="cart-info-group">
-            <div class="cart-info">
-              <h6><a href="product-single.html">existing product name</a></h6>
-              <p>Unit Price - $8.75</p>
-            </div>
-            <div class="cart-action-group">
-              <div class="product-action">
-                <button class="action-minus" title="Quantity Minus">
-                  <i class="icofont-minus"></i>
-                </button>
-                <input
-                  class="action-input"
-                  title="Quantity Number"
-                  type="text"
-                  name="quantity"
-                  value="1"
-                />
-                <button class="action-plus" title="Quantity Plus">
-                  <i class="icofont-plus"></i>
-                </button>
-              </div>
-              <h6>$56.98</h6>
-            </div>
-          </div>
-        </li>
+        {% endfor %}
+          
+        
       </ul>
       <div class="cart-footer">
         <button class="coupon-btn">Do you have a coupon code?</button>
@@ -1026,7 +898,7 @@
                 <img src="images/logo.png" alt="logo" />
               </a>
               <p class="footer-desc">
-                {{get_settings.subtitle}} </p>
+                {{settings_data.subtitle}} </p>
               <ul class="footer-social">
                 <li><a class="icofont-facebook" href="#"></a></li>
                 <li><a class="icofont-twitter" href="#"></a></li>
@@ -1043,19 +915,19 @@
                 <li>
                   <i class="icofont-ui-email"></i>
                   <p>
-                    <span>{{get_settings.emails}}</span>
+                    <span>{{settings_data.emails}}</span>
                     
                   </p>
                 </li>
                 <li>
                   <i class="icofont-ui-touch-phone"></i>
                   <p>
-                    <span>{{get_settings.phones}}</span>
+                    <span>{{settings_data.phones}}</span>
                     </p>
                 </li>
                 <li>
                   <i class="icofont-location-pin"></i>
-                  <p>{{get_settings.address}}</p>
+                  <p>{{settings_data.address}}</p>
                 </li>
               </ul>
             </div>
