--- a/templates/base.html
+++ b/templates/base.html
@@ -162,8 +162,8 @@
             </a>
             <button class="header-widget header-cart" title="Cartlist">
               <i class="fas fa-shopping-basket"></i>
-              <sup>9+</sup>
-              <span>total price<small>$345.00</small></span>
+              <sup>{{cart_details_data|length}}</sup>
+              <span>total price<small>${{cart_data.cart_total}}</small></span>
             </button>
           </div>
         </div>
@@ -428,9 +428,9 @@
           <input type="text" placeholder="Enter your coupon code" />
           <button type="submit"><span>apply</span></button>
         </form>
-        <a class="cart-checkout-btn" href="checkout.html">
+        <a class="cart-checkout-btn" href="/orders/checkout">
           <span class="checkout-label">Proceed to Checkout</span>
-          <span class="checkout-price">$369.78</span>
+          <span class="checkout-price">${{cart_data.cart_total}}</span>
         </a>
       </div>
     </aside>
