--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -95,25 +95,28 @@
             </ul>
           </div>
           <div class="details-add-group">
-            <button class="product-add" title="Add to Cart">
-              <i class="fas fa-shopping-basket"></i>
-              <span>add to cart</span>
-            </button>
-            <div class="product-action">
-              <button class="action-minus" title="Quantity Minus">
-                <i class="icofont-minus"></i>
-              </button>
-              <input
-                class="action-input"
-                title="Quantity Number"
-                type="text"
-                name="quantity"
-                value="1"
-              />
-              <button class="action-plus" title="Quantity Plus">
-                <i class="icofont-plus"></i>
-              </button>
-            </div>
+            
+            <form action="/orders/add_to_cart" method="post" >
+              {% csrf_token %}
+              <div class="row">
+                <div class="col-lg-8 my-2">
+                <input class="action-input"  title="Quantity Number" type="number" name="quantity" value="1" />
+                <input type="hidden" value="{{object.id}} " name="product_id" >   
+              </div>
+              </div>  
+              
+              <div class="row">
+                <button class="col-lg-8 product-add">
+                  <i class="fas fa-shopping-basket"></i>
+                  <span> add to cart</span>
+                </button>
+              </div>      
+            
+           </form>
+       
+            
+            
+            
           </div>
           <div class="details-action-group">
             <a class="details-wish wish" href="#" title="Add Your Wishlist">
