--- a/templates/base.html
+++ b/templates/base.html
@@ -401,7 +401,7 @@
           </div>
           <div class="cart-info-group">
             <div class="cart-info">
-              <h6><a href="product-single.html">existing product name</a></h6>
+              <h6><a href="product-single.html">{{item.product}}</a></h6>
               <p>Unit Price - ${{item.product.price}}</p>
             </div>
             <div class="cart-action-group">
