--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -95,24 +95,33 @@
             </ul>
           </div>
           <div class="details-add-group">
+
             
+              {% if object.quantity > 0 %}
+                    
             <form action="/orders/add_to_cart" method="post" >
               {% csrf_token %}
-              <div class="row">
-                <div class="col-lg-8 my-2">
-                <input class="action-input"  title="Quantity Number" type="number" name="quantity" value="1" />
-                <input type="hidden" value="{{object.id}} " name="product_id" >   
-              </div>
-              </div>  
-              
-              <div class="row">
-                <button class="col-lg-8 product-add">
-                  <i class="fas fa-shopping-basket"></i>
-                  <span> add to cart</span>
-                </button>
-              </div>      
-            
+                  <div class="row">
+                      <div class="col-lg-8 my-2">
+                      <input class="action-input"  title="Quantity Number" type="number" name="quantity" value="1" />
+                      <input type="hidden" value="{{object.id}} " name="product_id" >   
+                  </div>
+                  </div>  
+                  
+                  <div class="row">
+                      <button class="col-lg-8 product-add">
+                        <i class="fas fa-shopping-basket"></i>
+                        <span> add to cart</span>
+                      </button>
+                  </div>      
+                
            </form>
+            
+              {% else %}
+                <h2>out of stock</h2>
+              {% endif %}
+              
+            
        
             
             
