add auth templates

--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -11,12 +11,21 @@
                 </div>
                 <div class="user-form-card">
                     <div class="user-form-title">
-                      <h1>The password has been changed!</h1>
-                      <p><a href="{% url 'login' %}">log in again?</a></p>
-                    
+                        <h2>any issue?</h2>
+                        <p>Make sure your current password is strong</p>
                     </div>
-                 </div>
-                 <div class="user-form-footer">
+                    <form class="user-form" method="post">
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+                        <div class="form-button">
+                          {% bootstrap_button button_type="submit" content="Change Password" %} 
+                   
+                    </form>
+                </div>
+                <div class="user-form-remind">
+                    <p>Go Back To<a href="/accounts/login">login here</a></p>
+                </div>
+                <div class="user-form-footer">
                     <p>Greeny | &COPY; Copyright by <a href="/">{{settings_data.name}}</a></p>
                 </div>
             </div>
@@ -24,10 +33,6 @@
     </div>
 </section>
 {% endblock body %} 
-
-
-
-
 
 
 
