--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,24 +1,77 @@
-{% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change my password"></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+{% extends 'auth_base.html' %}
+{% load django_bootstrap5 %}
+
+{% block body %}
+<section class="user-form-part">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
+                <div class="user-form-logo">
+                    <a href="index.html"><img src="{{settings_data.logo.url}}" alt="logo"></a>
+                </div>
+                {% if validlink %}
+                   <p>Please enter (and confirm) your new password.</p>
+           
+                    <div class="user-form-card">
+                           <div class="user-form-title">
+                                <h2>any issue?</h2>
+                                <p>No Problem! Just Follow The Simple Way</p>
+                           </div>
+                           <form class="user-form" method="post">
+                                {% csrf_token %}
+                                {% bootstrap_form form %}
+                                <div class="form-button">
+                                {% bootstrap_button button_type="submit" content="Change my password" %} 
+                        
+                            </form>
+                    </div>
+
+                    {% else %}
+                    <div class="user-form-title">
+                        <h2>Password reset failed</h2>
+                        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+
+                   </div>
+                {% endif %}
+                <div class="user-form-remind">
+                    <p>Go Back To<a href="/accounts/login">login here</a></p>
+                </div>
+                <div class="user-form-footer">
+                    <p>Greeny | &COPY; Copyright by <a href="/">{{settings_data.name}}</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock body %} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
