Edit Reviews section in product_detail.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -167,8 +167,8 @@
             {% if user.is_authenticated %}
                 <img src="images/user.png" alt="user" />
             {% else %}
-                <a href="#"> login </a>
-                <a href="#"> signup</a>
+                <a href="/accounts/login"> login </a>
+                <a href="/accounts/signup"> signup</a>
             {% endif %}
             
             
