--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -186,74 +186,79 @@
             </tbody>
           </table>
         </div>
-        <div class="product-details-frame">
-          <h3 class="frame-title">Reviews (2)</h3>
-          <ul class="review-list">
-            {% for review in reviewsTem %}
-
-            <li class="review-item">
-              <div class="review-media">
-                <a class="review-avatar" href="#">
-                  <img src="images/avatar/01.jpg" alt="review" />
-                </a>
-                <h5 class="review-meta">
-                  <a href="#">{{review.user}}</a>
-                  <span>June 02, 2020</span>
-                  <span>{{review.date}}</span>
-                </h5>
-              </div>
-              <ul class="review-rating">
-                <li class="icofont-ui-{% if review.rate > 0 %}rating{% else %}rate-blank{% endif %}"></li>
-                <li class="icofont-ui-{% if review.rate > 1 %}rating{% else %}rate-blank{% endif %}"></li>
-                <li class="icofont-ui-{% if review.rate > 2 %}rating{% else %}rate-blank{% endif %}"></li>
-                <li class="icofont-ui-{% if review.rate > 3 %}rating{% else %}rate-blank{% endif %}"></li>
-                <li class="icofont-ui-{% if review.rate > 4 %}rating{% else %}rate-blank{% endif %}"></li>
-                
-            </ul>
-  
-              <p class="review-desc">{{review.review}}</p>
-              <ul class="review-reply-list">
-                <li class="review-reply-item">
-                  <div class="review-media"></div>
-                  <form class="review-reply">
-                    <input type="text" placeholder="reply your thoughts" />
-                    <button><i class="icofont-reply"></i>reply</button>
-                  </form>
-                </li>
-              </ul>
-            </li>
-            {% endfor %}
-          </ul>
+        <div class="product-details-frame" id="all-revies"> <!-- id used with ajax -->
+      <!-- Include from inclide reviwes-->
+     
+         <h3 class="frame-title">Reviews ({{review|length}})</h3>
+         <ul class="review-list">
+           {% for review in reviews %}
+         
+           <li class="review-item">
+             <div class="review-media">
+               <a class="review-avatar" href="#">
+                 <img src="images/avatar/01.jpg" alt="review" />
+               </a>
+               <h5 class="review-meta">
+                 <a href="#">{{review.user}}</a>
+                 <span>June 02, 2020</span>
+                 <span>{{review.date}}</span>
+               </h5>
+             </div>
+             <ul class="review-rating">
+               <li class="icofont-ui-{% if review.rate > 0 %}rating{% else %}rate-blank{% endif %}"></li>
+               <li class="icofont-ui-{% if review.rate > 1 %}rating{% else %}rate-blank{% endif %}"></li>
+               <li class="icofont-ui-{% if review.rate > 2 %}rating{% else %}rate-blank{% endif %}"></li>
+               <li class="icofont-ui-{% if review.rate > 3 %}rating{% else %}rate-blank{% endif %}"></li>
+               <li class="icofont-ui-{% if review.rate > 4 %}rating{% else %}rate-blank{% endif %}"></li>
+               
+           </ul>
+         
+             <p class="review-desc">{{review.review}}</p>
+             <ul class="review-reply-list">
+               <li class="review-reply-item">
+                 <div class="review-media"></div>
+                 <form class="review-reply">
+                   <input type="text" placeholder="reply your thoughts" />
+                   <button><i class="icofont-reply"></i>reply</button>
+                 </form>
+               </li>
+             </ul>
+           </li>
+           {% endfor %}
+         </ul>
+           
+      <!-- Include -->
         </div>
 
         <div class="product-details-frame">
           <h3 class="frame-title">add your review</h3>
-          <form class="review-form" method="post" action="/products/{{object.slug}}/add-review">
-            {% csrf_token %}
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="star-rating">
-                  <input type="radio" name="rating" value="5" id="star-1" /><label for="star-1"></label>
-                  <input type="radio" name="rating" value="4" id="star-2" /><label for="star-2"></label>
-                  <input type="radio" name="rating" value="3" id="star-3" /><label for="star-3"></label>
-                  <input type="radio" name="rating" value="2" id="star-4" /><label for="star-4" ></label>
-                  <input type="radio" name="rating" value="1" id="star-5" /><label for="star-5"></label>
-                </div>
-              </div>
-              <div class="col-lg-12">
-                <div class="form-group">
-                  <textarea class="form-control" name="review" placeholder="Describe"></textarea>
-                </div>
-              </div>
+  <!-- id for ajax -->
+  <form id="reviewForm" class="review-form" method="post" action="/products/{{object.slug}}/add-review">
+                        {% csrf_token %}
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="star-rating">
+                              <input type="radio" name="rating" value="5" id="star-1" /><label for="star-1"></label>
+                              <input type="radio" name="rating" value="4" id="star-2" /><label for="star-2"></label>
+                              <input type="radio" name="rating" value="3" id="star-3" /><label for="star-3"></label>
+                              <input type="radio" name="rating" value="2" id="star-4" /><label for="star-4" ></label>
+                              <input type="radio" name="rating" value="1" id="star-5" /><label for="star-5"></label>
+                            </div>
+                          </div>
+                          <div class="col-lg-12">
+                            <div class="form-group">
+                              <textarea class="form-control" name="review" placeholder="Describe"></textarea>
+                            </div>
+                          </div>
 
-              <div class="col-lg-12">
-                <button class="btn btn-inline" type="submit">
-                  <i class="icofont-water-drop"></i>
-                  <span>drop your review</span>
-                </button>
-              </div>
-            </div>
-          </form>
+                          <div class="col-lg-12">
+                            <button class="btn btn-inline" type="submit">
+                              <i class="icofont-water-drop"></i>
+                              <span>drop your review</span>
+                            </button>
+                          </div>
+                        </div>
+                      </form>
         </div>
       </div>
     </div>
