Edit IMAGES section in product_detail.html

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -189,7 +189,7 @@
         <div class="product-details-frame" id="all-revies"> <!-- id used with ajax -->
       <!-- Include from inclide reviwes-->
      
-         <h3 class="frame-title">Reviews ({{review|length}})</h3>
+         <h3 class="frame-title">Reviews ({{reviewS|length}})</h3>
          <ul class="review-list">
            {% for review in reviews %}
          
