--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -99,7 +99,7 @@
             
               {% if object.quantity > 0 %}
                     
-            <form action="/orders/add_to_cart" method="post" >
+            <form action="/orders/add_to_cart" method="post"  id="addToCart">
               {% csrf_token %}
                   <div class="row">
                       <div class="col-lg-8 my-2">
@@ -220,7 +220,7 @@
                                   </button>
                                 </div>
                               </div>
-          </form>
+            </form>
         </div>
       </div>
     </div>
@@ -335,4 +335,46 @@
 =======================================-->
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script>
+  
+  $(document).ready(function(){ //execute code on loading
+        
+    //add review
+    $(document).on('submit','#reviewForm',function(event){ //on event submiting for form with reviewForm id do the function below
+          //no refresh 
+          event.preventDefault()
+        
+      //ajax
+        $.ajax({
+          type: $(this).attr('method'), 
+          url : $(this).attr('action'), 
+          data: $(this).serialize(),
+          dataType:'json',
+          success:function(response){
+            $('#all-reviews').html(response['result'])
+            $('#reviewForm').trigger("reset")
+          },
+          error:function(){}
+        })
+      })
+      //add To Cart
+      $(document).on('submit','#addToCart',function(event){ //on event submiting for form with reviewForm id do the function below
+          //no refresh 
+          event.preventDefault()
+        })
+      //ajax
+        $.ajax({
+          type: $(this).attr('method'), 
+          url : $(this).attr('action'), 
+          data: $(this).serialize(),
+          dataType:'json',
+          success:function(response){
+            $('#addToCart').html(response['result'])
+          },
+          error:function(){}
+        })
+        
+    })
+ 
+</script>
 {% endblock b %}
